--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
+  "engines": {
+  "node": ">=18.18.0"
+}
+
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -94,13 +98,13 @@
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.1",
-    "esbuild": "^0.25.0",
+    "esbuild": "^0.19.0"
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^4.0.0",
-    "esbuild": "^0.19.0"
+    
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
